--- a/benchmarks/index.html
+++ b/benchmarks/index.html
@@ -8,7 +8,7 @@
   
   <meta name="author" content="Kris Jusiak">
   
-  <title>Benchmarks - Boost.DI</title>
+  <title>Benchmarks - [Boost].DI</title>
   
 
   <link rel="shortcut icon" href="../img/favicon.ico">
@@ -64,7 +64,7 @@
 	<nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
 
       <img src="../img/boost.png" />
-      <a href="../index.html" class="icon icon-home" style="font-weight:bold;text-align:left;padding:0.809em;color:#fcfcfc;margin-bottom:0.809em"> Boost.DI</a>
+      <a href="../index.html" class="icon icon-home" style="font-weight:bold;text-align:left;padding:0.809em;color:#fcfcfc;margin-bottom:0.809em"> [Boost].DI</a>
 
       <div class="wy-side-nav-search">
 		<div role="search">
@@ -185,7 +185,7 @@
       
       <nav class="wy-nav-top" role="navigation" aria-label="top navigation">
         <i data-toggle="wy-nav-top" class="fa fa-bars"></i>
-        <a href="../index.html">Boost.DI</a>
+        <a href="../index.html">[Boost].DI</a>
       </nav>
 
       
@@ -214,7 +214,7 @@
 <thead>
 <tr>
 <th><strong>Library</strong></th>
-<th>Boost.DI (<a href="../overview/index.html#performance">See Performance</a>)</th>
+<th>[Boost].DI (<a href="../overview/index.html#performance">See Performance</a>)</th>
 <th><a href="https://bitbucket.org/cheez/dicpp/wiki/Home">dicpp</a></th>
 <th><a href="https://github.com/google/fruit">Google.Fruit</a></th>
 </tr>
@@ -285,7 +285,7 @@
 <tr>
 <td><strong>Clang-3.7</strong></td>
 <td><strong>Baseline</strong></td>
-<td><strong>Boost.DI</strong></td>
+<td><strong>[Boost].DI</strong></td>
 <td><strong><a href="https://bitbucket.org/cheez/dicpp/wiki/Home">dicpp</a></strong></td>
 <td><strong><a href="https://github.com/google/fruit">Google.Fruit</a></strong></td>
 </tr>
@@ -373,7 +373,7 @@
 <thead>
 <tr>
 <th><strong>Library</strong></th>
-<th>Boost.DI</th>
+<th>[Boost].DI</th>
 <th><a href="https://github.com/google/guice">Google.Guice</a></th>
 <th><a href="https://github.com/google/dagger">Dagger2</a></th>
 <th><a href="https://github.com/ninject/ninject">Ninject</a></th>
@@ -454,7 +454,7 @@
 <tr>
 <td><strong>Clang-3.7 -O2 / Java8 / Mono4.2 --aot</strong></td>
 <td><strong>Baseline</strong></td>
-<td><strong>Boost.DI</strong></td>
+<td><strong>[Boost].DI</strong></td>
 <td><strong><a href="https://github.com/google/fruit">Google.Fruit</a></strong></td>
 <td><strong><a href="https://github.com/google/guice">Google.Guice</a></strong></td>
 <td><strong><a href="https://github.com/google/dagger">Dagger2</a></strong></td>
@@ -651,7 +651,7 @@
 </thead>
 <tbody>
 <tr>
-<td>Boost.DI</td>
+<td>[Boost].DI</td>
 <td><img alt="CPP(SHOW)" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/di.cpp" /></td>
 <td><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_interface/di.cpp">ASM x86-64</a></td>
 </tr>
@@ -692,7 +692,7 @@
 </thead>
 <tbody>
 <tr>
-<td>Boost.DI</td>
+<td>[Boost].DI</td>
 <td><img alt="CPP(SHOW)" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/di.cpp" /></td>
 <td><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_value/di.cpp">ASM x86-64</a></td>
 </tr>
@@ -732,7 +732,7 @@
 </thead>
 <tbody>
 <tr>
-<td>Boost.DI</td>
+<td>[Boost].DI</td>
 <td><img alt="CPP(SHOW)" src="https://raw.githubusercontent.com/boost-experimental/di/cpp14/benchmark/bind_error/di.cpp" /></td>
 </tr>
 <tr>
