--- a/boost/benchmarks/index.html
+++ b/boost/benchmarks/index.html
@@ -5,7 +5,7 @@
 
 <meta name="author" content="Kris Jusiak">
 <link rel="canonical" href="http://boost-experimental.github.io/di/benchmarks/index.html">
-<title>Benchmarks - Boost.DI</title>
+<title>Benchmarks - [Boost].DI</title>
 
 <link href="../css/boostbook.css" rel="stylesheet">
 <link href="../css/github.css" rel="stylesheet">
@@ -50,7 +50,7 @@
 <thead>
 <tr>
 <th><strong>Library</strong></th>
-<th>Boost.DI (<a href="../overview/index.html#performance">See Performance</a>)</th>
+<th>[Boost].DI (<a href="../overview/index.html#performance">See Performance</a>)</th>
 <th><a href="https://bitbucket.org/cheez/dicpp/wiki/Home">dicpp</a></th>
 <th><a href="https://github.com/google/fruit">Google.Fruit</a></th>
 </tr>
@@ -121,7 +121,7 @@
 <tr>
 <td><strong>Clang-3.7</strong></td>
 <td><strong>Baseline</strong></td>
-<td><strong>Boost.DI</strong></td>
+<td><strong>[Boost].DI</strong></td>
 <td><strong><a href="https://bitbucket.org/cheez/dicpp/wiki/Home">dicpp</a></strong></td>
 <td><strong><a href="https://github.com/google/fruit">Google.Fruit</a></strong></td>
 </tr>
@@ -209,7 +209,7 @@
 <thead>
 <tr>
 <th><strong>Library</strong></th>
-<th>Boost.DI</th>
+<th>[Boost].DI</th>
 <th><a href="https://github.com/google/guice">Google.Guice</a></th>
 <th><a href="https://github.com/google/dagger">Dagger2</a></th>
 <th><a href="https://github.com/ninject/ninject">Ninject</a></th>
@@ -290,7 +290,7 @@
 <tr>
 <td><strong>Clang-3.7 -O2 / Java8 / Mono4.2 --aot</strong></td>
 <td><strong>Baseline</strong></td>
-<td><strong>Boost.DI</strong></td>
+<td><strong>[Boost].DI</strong></td>
 <td><strong><a href="https://github.com/google/fruit">Google.Fruit</a></strong></td>
 <td><strong><a href="https://github.com/google/guice">Google.Guice</a></strong></td>
 <td><strong><a href="https://github.com/google/dagger">Dagger2</a></strong></td>
