--- a/boost/extensions/index.html
+++ b/boost/extensions/index.html
@@ -5,7 +5,7 @@
 
 <meta name="author" content="Kris Jusiak">
 <link rel="canonical" href="http://boost-experimental.github.io/di/extensions/index.html">
-<title>Extensions - Boost.DI</title>
+<title>Extensions - [Boost].DI</title>
 
 <link href="../css/boostbook.css" rel="stylesheet">
 <link href="../css/github.css" rel="stylesheet">
