--- a/boost/index.html
+++ b/boost/index.html
@@ -5,7 +5,7 @@
 
 <meta name="author" content="Kris Jusiak">
 <link rel="canonical" href="http://boost-experimental.github.io/di/index.html">
-<title>Boost.DI</title>
+<title>[Boost].DI</title>
 
 <link href="./css/boostbook.css" rel="stylesheet">
 <link href="./css/github.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 <div class="chapter">
 <div class="titlepage"><div>
 <div><h2 class="title">
-<a></a>Boost.DI</h2></div>
+<a></a>[Boost].DI</h2></div>
 <div><div class="author"><h3 class="author">
 Kris Jusiak
 </h3></div></div>
@@ -109,7 +109,7 @@ Kris Jusiak
 <table>
 <thead>
 <tr>
-<th><strong>Experimental Boost.DI</strong></th>
+<th><strong>[Boost].DI</strong></th>
 <th></th>
 </tr>
 </thead>
@@ -286,16 +286,16 @@ but also can help you with...</p>
 </ul>
 </li>
 </ul>
-<h3 id="why-boostdi">Why Boost.DI?</h3>
+<h3 id="why-boostdi">Why [Boost].DI?</h3>
 <ul>
-<li>Boost.DI has none or minimal run-time overhead (See <a href="overview/index.html#performance">Performance</a>)</li>
-<li>Boost.DI compiles fast / <strong>Faster than Java-<a href="https://github.com/google/dagger">Dagger2</a>!</strong> (See <a href="overview/index.html#benchmarks">Benchmarks</a>)</li>
-<li>Boost.DI gives short diagnostic messages (See <a href="overview/index.html#error-messages">Error messages</a>)</li>
-<li>Boost.DI is non-intrusive (See <a href="user_guide/index.html#injections">Injections</a>)</li>
-<li>Boost.DI reduces boilerplate code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>)</li>
-<li>Boost.DI reduces testing effort (See <a href="extensions/index.html#mocks-provider">Mocks Provider</a>)</li>
-<li>Boost.DI gives better control of what and how is created (See <a href="user_guide/index.html#di_constructible">Constructible Policy</a>)</li>
-<li>Boost.DI gives better understanding about objects hierarchy (See <a href="extensions/index.html#uml-dumper">UML Dumper</a>)</li>
+<li>[Boost].DI has none or minimal run-time overhead (See <a href="overview/index.html#performance">Performance</a>)</li>
+<li>[Boost].DI compiles fast / <strong>Faster than Java-<a href="https://github.com/google/dagger">Dagger2</a>!</strong> (See <a href="overview/index.html#benchmarks">Benchmarks</a>)</li>
+<li>[Boost].DI gives short diagnostic messages (See <a href="overview/index.html#error-messages">Error messages</a>)</li>
+<li>[Boost].DI is non-intrusive (See <a href="user_guide/index.html#injections">Injections</a>)</li>
+<li>[Boost].DI reduces boilerplate code (See <a href="tutorial/index.html#1-basic-create-objects-tree">Create Objects Tree</a>)</li>
+<li>[Boost].DI reduces testing effort (See <a href="extensions/index.html#mocks-provider">Mocks Provider</a>)</li>
+<li>[Boost].DI gives better control of what and how is created (See <a href="user_guide/index.html#di_constructible">Constructible Policy</a>)</li>
+<li>[Boost].DI gives better understanding about objects hierarchy (See <a href="extensions/index.html#uml-dumper">UML Dumper</a>)</li>
 </ul>
 <pre><code class="cpp">+---------------------------------------------------+
 |$CXX -std=c++14 -fno-exceptions -O2 example.cpp    |
@@ -374,7 +374,7 @@ but also can help you with...</p>
 <li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/user_guide/policies_constructible_local.cpp"> Constructible Example</a></li>
 </ul>
 <p><br /><br /></p>
-<h3 id="boostdi-design-goals">Boost.DI design goals</h3>
+<h3 id="boostdi-design-goals">[Boost].DI design goals</h3>
 <ul>
 <li>Be as fast as possible (See <a href="overview/index.html#performance">Performance</a>)</li>
 <li>Compile as fast as possible (See <a href="overview/index.html#benchmarks">Benchmarks</a>)</li>
@@ -385,8 +385,8 @@ but also can help you with...</p>
 </ul>
 <h3 id="acknowledgements">Acknowledgements</h3>
 <ul>
-<li>Thanks to Bartosz Kalinczuk for code review and tips how to improve <code>Boost.DI</code></li>
-<li>Thanks to Sohail Somani for support and tips how to improve <code>Boost.DI</code></li>
+<li>Thanks to Bartosz Kalinczuk for code review and tips how to improve <code>[Boost].DI</code></li>
+<li>Thanks to Sohail Somani for support and tips how to improve <code>[Boost].DI</code></li>
 <li>Thanks to Rob Stewart and Robert Ramey for documentation feedback and tips how to improve it</li>
 </ul>
 </div>
