--- a/boost/materials/index.html
+++ b/boost/materials/index.html
@@ -5,7 +5,7 @@
 
 <meta name="author" content="Kris Jusiak">
 <link rel="canonical" href="http://boost-experimental.github.io/di/materials/index.html">
-<title>Materials/Videos - Boost.DI</title>
+<title>Materials/Videos - [Boost].DI</title>
 
 <link href="../css/boostbook.css" rel="stylesheet">
 <link href="../css/github.css" rel="stylesheet">
@@ -44,10 +44,15 @@
 <p><a href="https://www.youtube.com/embed/RlfLCWKxHJ0">https://www.youtube.com/embed/RlfLCWKxHJ0</a></p>
 <hr />
 <ul>
-<li>C++Now 2016: <strong>C++14 Dependency Injection Library (Boost.DI)</strong></li>
+<li>C++Now 2016: <strong>C++14 Dependency Injection Library ([Boost].DI)</strong></li>
 </ul>
 <p><a href="https://www.youtube.com/embed/comZthFv3PM">https://www.youtube.com/embed/comZthFv3PM</a></p>
 <p><a href="http://boost-experimental.github.io/di/cppnow-2016">Slides</a></p>
+<hr />
+<ul>
+<li>MeetingC++ 2016: <strong>TDD/BDD and Dependency Injection</strong></li>
+</ul>
+<p><a href="http://boost-experimental.github.io/di/meetingcpp-2016">Slides</a></p>
 <hr />
 <ul>
 <li><strong>A New Type of dependency injection</strong></li>
