--- a/boost/overview/index.html
+++ b/boost/overview/index.html
@@ -5,7 +5,7 @@
 
 <meta name="author" content="Kris Jusiak">
 <link rel="canonical" href="http://boost-experimental.github.io/di/overview/index.html">
-<title>Overview - Boost.DI</title>
+<title>Overview - [Boost].DI</title>
 
 <link href="../css/boostbook.css" rel="stylesheet">
 <link href="../css/github.css" rel="stylesheet">
@@ -116,7 +116,7 @@ namespace di = boost::di;
 <tbody>
 <tr>
 <td><code>BOOST_DI_VERSION</code></td>
-<td>Current version of Boost.DI (ex. 1'0'0)</td>
+<td>Current version of [Boost].DI (ex. 1'0'0)</td>
 </tr>
 <tr>
 <td><code>BOOST_DI_CFG</code></td>
@@ -142,12 +142,12 @@ namespace di = boost::di;
 </table>
 <h3 id="exception-safety">Exception Safety</h3>
 <ul>
-<li>Boost.DI is not using exceptions internally and therefore might be compiled with <code>-fno-exceptions</code>.</li>
+<li>[Boost].DI is not using exceptions internally and therefore might be compiled with <code>-fno-exceptions</code>.</li>
 <li>Check <a href="../user_guide/index.html">User Guide</a> to verify which API's are marked <code>noexcept</code>.</li>
 </ul>
 <h3 id="thread-safety">Thread Safety</h3>
 <ul>
-<li>Boost.DI is thread safe.</li>
+<li>[Boost].DI is thread safe.</li>
 </ul>
 <h3 id="design">Design</h3>
 <p><a href="../images/di.png"><img alt="Design" src="../images/di.png" /></a></p>
@@ -453,7 +453,7 @@ auto test() {
 <table>
 <thead>
 <tr>
-<th>Boost.DI header</th>
+<th>[Boost].DI header</th>
 <th>Time [s]</th>
 </tr>
 </thead>
