--- a/boost/user_guide/index.html
+++ b/boost/user_guide/index.html
@@ -5,7 +5,7 @@
 
 <meta name="author" content="Kris Jusiak">
 <link rel="canonical" href="http://boost-experimental.github.io/di/user_guide/index.html">
-<title>User Guide - Boost.DI</title>
+<title>User Guide - [Boost].DI</title>
 
 <link href="../css/boostbook.css" rel="stylesheet">
 <link href="../css/github.css" rel="stylesheet">
@@ -566,14 +566,14 @@ int main() {
 <p><br /><br /><br /><hr /></p>
 <h3 id="injections">Injections</h3>
 <p><em>Constructor Injection</em> is the most powerful of available injections.
-It guarantees initialized state of data members. Boost.DI constructor injection is achieved without any additional work from the user.</p>
+It guarantees initialized state of data members. [Boost].DI constructor injection is achieved without any additional work from the user.</p>
 <p><a id="di_automatic"></a>
 --- <strong><em>automatic (default)</em></strong> ---</p>
 <p><strong><em>Header</em></strong></p>
 <pre><code>#include &lt;boost/di.hpp&gt;
 </code></pre>
 <p><strong><em>Description</em></strong></p>
-<p>Boost.DI will deduce the best available constructor to be used for injection - unique constructor with the longest parameter list.
+<p>[Boost].DI will deduce the best available constructor to be used for injection - unique constructor with the longest parameter list.
 If the default behavior should be changed constructor has to be explicitly marked with
 <a href="#BOOST_DI_INJECT">BOOST_DI_INJECT</a> or <a href="#BOOST_DI_INJECT_TRAITS">BOOST_DI_INJECT_TRAITS</a> or di::ctor_traits] or <a href="#di_inject">di::inject</a>.</p>
 <p><span class="fa fa-eye wy-text-neutral warning"> <strong>Note</strong><br/><br/>
@@ -604,7 +604,7 @@ public:
 </tbody>
 </table>
 <p><span class="fa fa-eye wy-text-neutral warning"> <strong>Note</strong><br/><br/>
-Boost.DI is not able to automatically distinguish between ambiguous constructors with the same (longest) number of parameters.
+[Boost].DI is not able to automatically distinguish between ambiguous constructors with the same (longest) number of parameters.
 Use <a href="#BOOST_DI_INJECT">BOOST_DI_INJECT</a> or <a href="#BOOST_DI_INJECT_TRAITS">BOOST_DI_INJECT_TRAITS</a> or <a href="#di_ctor_traits">di::ctor_traits</a> or <a href="#di_inject">di::inject</a> to explicitly mark constructor to be injected.
 </span></p>
 <p><strong><em>Test</em></strong></p>
@@ -699,9 +699,9 @@ int main() {
 <pre><code>#include &lt;boost/di.hpp&gt;
 </code></pre>
 <p><strong><em>Description</em></strong></p>
-<p>BOOST_DI_INJECT is a macro definition used to explicitly say Boost.DI which constructor should be used as well as to annotate types - see <a href="#annotations">annotations</a> for further reding.
-When class has more than one constructor Boost.DI will by default choose the one with the longest parameter list.
-In case of constructors ambiguity, Boost.DI is not able to choose the best one.
+<p>BOOST_DI_INJECT is a macro definition used to explicitly say [Boost].DI which constructor should be used as well as to annotate types - see <a href="#annotations">annotations</a> for further reding.
+When class has more than one constructor [Boost].DI will by default choose the one with the longest parameter list.
+In case of constructors ambiguity, [Boost].DI is not able to choose the best one.
 Then BOOST_DI_INJECT becomes handy to point which constructor should be used.</p>
 <p><strong><em>Semantics</em></strong></p>
 <pre><code>struct T {
@@ -847,7 +847,7 @@ int main() {
 <pre><code>#include &lt;boost/di.hpp&gt;
 </code></pre>
 <p><strong><em>Description</em></strong></p>
-<p><code>di::inject</code> informs Boost.DI about constructor parameters.
+<p><code>di::inject</code> informs [Boost].DI about constructor parameters.
 It's useful for generated/generic classes as it doesn't have constructor parameters size limitations.</p>
 <p><strong><em>Semantics</em></strong></p>
 <pre><code>struct T {
@@ -875,7 +875,7 @@ It's useful for generated/generic classes as it doesn't have constructor paramet
 </table>
 <p><span class="fa fa-eye wy-text-neutral warning"> <strong>Note</strong><br/><br/>
 <code>di::inject</code> has no limitations if it comes to constructor parameters, however, <a href="#di_named">named</a> parameters are not allowed.
-Moreover, you can replace <code>di::inject</code> with any variadic type list type to remove dependency to Boost.DI.
+Moreover, you can replace <code>di::inject</code> with any variadic type list type to remove dependency to [Boost].DI.
 For example, <code>template&lt;class...&gt; struct type_list{};</code> <code>using boost_di_inject__ = type_list&lt;...&gt;;</code>
 </span></p>
 <p><strong><em>Test</em></strong></p>
@@ -990,7 +990,7 @@ For example, <code>T(int, int)</code>.</p>
 </code></pre>
 
 <p>In order to inject proper values into <code>value1</code> and <code>value2</code> they have to be differentiate somehow.
-Boost.DI solution for this problem are annotations.</p>
+[Boost].DI solution for this problem are annotations.</p>
 <p><span class="fa fa-eye wy-text-neutral warning"> <strong>Note</strong><br/><br/>
 Annotations might be set only when constructor is marked using <a href="#BOOST_DI_INJECT">BOOST_DI_INJECT</a> or <a href="#BOOST_DI_INJECT_TRAITS">BOOST_DI_INJECT_TRAITS</a>.
 </span></p>
@@ -1481,7 +1481,7 @@ int main() {
 </code></pre>
 <p><strong><em>Description</em></strong></p>
 <p>Scope representing values - passed externally. The life time of the object depends on the user.
-Boost.DI is not maintaining the life time of these objects, however, values and strings will be copied and managed by the library.</p>
+[Boost].DI is not maintaining the life time of these objects, however, values and strings will be copied and managed by the library.</p>
 <table>
 <thead>
 <tr>
@@ -2442,7 +2442,7 @@ int main() {
 <p>Policies operates on dependencies in order to limit allowed behaviour or visit created types during run-time.
 Policies are set up via <a href="#di_config">Configuration</a>.</p>
 <p><span class="fa fa-eye wy-text-neutral warning"> <strong>Note</strong><br/><br/>
-By default Boost.DI has no policies enabled.
+By default [Boost].DI has NO policies enabled.
 </span></p>
 <p><strong><em>Semantics</em></strong></p>
 <pre><code>template &lt;class... TPolicies&gt; requires callable&lt;TPolicies...&gt;
@@ -2700,7 +2700,7 @@ int main() {
 </code></pre>
 
 <p><span class="fa fa-eye wy-text-neutral warning"> <strong>Note</strong><br/><br/>
-STL type traits are supported and might be combined with Boost.DI traits in order to limit constructor types
+STL type traits are supported and might be combined with [Boost].DI traits in order to limit constructor types
 For example, <code>std::is_same&lt;_, int&gt;{} || std::is_constructible&lt;_, int, int&gt;{} || std::is_base_of&lt;int, _&gt;{}</code>, etc...
 </span></p>
 <p><strong><em>Example</em></strong></p>
