--- a/materials/index.html
+++ b/materials/index.html
@@ -8,7 +8,7 @@
   
   <meta name="author" content="Kris Jusiak">
   
-  <title>Materials/Videos - Boost.DI</title>
+  <title>Materials/Videos - [Boost].DI</title>
   
 
   <link rel="shortcut icon" href="../img/favicon.ico">
@@ -64,7 +64,7 @@
 	<nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
 
       <img src="../img/boost.png" />
-      <a href="../index.html" class="icon icon-home" style="font-weight:bold;text-align:left;padding:0.809em;color:#fcfcfc;margin-bottom:0.809em"> Boost.DI</a>
+      <a href="../index.html" class="icon icon-home" style="font-weight:bold;text-align:left;padding:0.809em;color:#fcfcfc;margin-bottom:0.809em"> [Boost].DI</a>
 
       <div class="wy-side-nav-search">
 		<div role="search">
@@ -176,7 +176,7 @@
       
       <nav class="wy-nav-top" role="navigation" aria-label="top navigation">
         <i data-toggle="wy-nav-top" class="fa fa-bars"></i>
-        <a href="../index.html">Boost.DI</a>
+        <a href="../index.html">[Boost].DI</a>
       </nav>
 
       
@@ -211,10 +211,15 @@
 <p><img alt="YOUTUBE" src="https://www.youtube.com/embed/RlfLCWKxHJ0" /></p>
 <hr />
 <ul>
-<li>C++Now 2016: <strong>C++14 Dependency Injection Library (Boost.DI)</strong></li>
+<li>C++Now 2016: <strong>C++14 Dependency Injection Library ([Boost].DI)</strong></li>
 </ul>
 <p><img alt="YOUTUBE" src="https://www.youtube.com/embed/comZthFv3PM" /></p>
 <p><a href="http://boost-experimental.github.io/di/cppnow-2016">Slides</a></p>
+<hr />
+<ul>
+<li>MeetingC++ 2016: <strong>TDD/BDD and Dependency Injection</strong></li>
+</ul>
+<p><a href="http://boost-experimental.github.io/di/meetingcpp-2016">Slides</a></p>
 <hr />
 <ul>
 <li><strong>A New Type of dependency injection</strong></li>
