--- a/overview/index.html
+++ b/overview/index.html
@@ -8,7 +8,7 @@
   
   <meta name="author" content="Kris Jusiak">
   
-  <title>Overview - Boost.DI</title>
+  <title>Overview - [Boost].DI</title>
   
 
   <link rel="shortcut icon" href="../img/favicon.ico">
@@ -64,7 +64,7 @@
 	<nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
 
       <img src="../img/boost.png" />
-      <a href="../index.html" class="icon icon-home" style="font-weight:bold;text-align:left;padding:0.809em;color:#fcfcfc;margin-bottom:0.809em"> Boost.DI</a>
+      <a href="../index.html" class="icon icon-home" style="font-weight:bold;text-align:left;padding:0.809em;color:#fcfcfc;margin-bottom:0.809em"> [Boost].DI</a>
 
       <div class="wy-side-nav-search">
 		<div role="search">
@@ -203,7 +203,7 @@
       
       <nav class="wy-nav-top" role="navigation" aria-label="top navigation">
         <i data-toggle="wy-nav-top" class="fa fa-bars"></i>
-        <a href="../index.html">Boost.DI</a>
+        <a href="../index.html">[Boost].DI</a>
       </nav>
 
       
@@ -274,7 +274,7 @@ namespace di = boost::di;
 <tbody>
 <tr>
 <td><code>BOOST_DI_VERSION</code></td>
-<td>Current version of Boost.DI (ex. 1'0'0)</td>
+<td>Current version of [Boost].DI (ex. 1'0'0)</td>
 </tr>
 <tr>
 <td><code>BOOST_DI_CFG</code></td>
@@ -300,12 +300,12 @@ namespace di = boost::di;
 </table>
 <h3 id="exception-safety">Exception Safety</h3>
 <ul>
-<li>Boost.DI is not using exceptions internally and therefore might be compiled with <code>-fno-exceptions</code>.</li>
+<li>[Boost].DI is not using exceptions internally and therefore might be compiled with <code>-fno-exceptions</code>.</li>
 <li>Check <a href="../user_guide/index.html">User Guide</a> to verify which API's are marked <code>noexcept</code>.</li>
 </ul>
 <h3 id="thread-safety">Thread Safety</h3>
 <ul>
-<li>Boost.DI is thread safe.</li>
+<li>[Boost].DI is thread safe.</li>
 </ul>
 <h3 id="design">Design</h3>
 <p><a href="../images/di.png"><img alt="Design" src="../images/di.png" /></a></p>
@@ -444,7 +444,7 @@ conversion constructors <code>template&lt;class I&gt; T(I)</code> are not suppor
 <table>
 <thead>
 <tr>
-<th>Boost.DI header</th>
+<th>[Boost].DI header</th>
 <th>Time [s]</th>
 </tr>
 </thead>
