--- a/boost/tutorial/index.html
+++ b/boost/tutorial/index.html
@@ -5,7 +5,7 @@
 
 <meta name="author" content="Kris Jusiak">
 <link rel="canonical" href="http://boost-experimental.github.io/di/tutorial/index.html">
-<title>Tutorial - Boost.DI</title>
+<title>Tutorial - [Boost].DI</title>
 
 <link href="../css/boostbook.css" rel="stylesheet">
 <link href="../css/github.css" rel="stylesheet">
@@ -141,7 +141,7 @@ declare a convenient <code>di</code> namespace alias.</p>
 namespace di = boost::di;
 </code></pre>
 
-<p>That is enough to try out <code>Boost.DI</code>!</p>
+<p>That is enough to try out <code>[Boost].DI</code>!</p>
 <p>To have a first complete and working example we just have to add <code>main</code> function as usual.</p>
 <pre><code class="cpp">int main() {}
 </code></pre>
@@ -150,7 +150,7 @@ namespace di = boost::di;
 <pre><code>$CXX -std=c++14 example.cpp
 </code></pre>
 
-<p>Congrats, you are now ready to check out <code>Boost.DI</code> features!</p>
+<p>Congrats, you are now ready to check out <code>[Boost].DI</code> features!</p>
 <hr />
 <p>Let's move on to creating objects tree. Applications, usually, consists of a number of objects
 which have to be instantiated. For example, let's consider a simplified Model View Controller code...</p>
@@ -170,7 +170,7 @@ or, even worse, we refactored the code and dependencies order has changed - yea 
 <strong>ANY</strong> change in these classes constructors require developer input to maintain above boilerplate code!
 Not fun, not fun at all :(</p>
 <p>Right now imagine that your maintain effort will be minimized almost to none. How does it sound?
-Well, that might be simply achieved with <code>Boost.DI</code>!</p>
+Well, that might be simply achieved with <code>[Boost].DI</code>!</p>
 <p>The same result might be achieved with one liner. Doesn't matter how big the hierarchy will be.
 We just have to create <a href="../user_guide/index.html#di_make_injector">injector</a> using <a href="../user_guide/index.html#make_injector">make_injector</a> and create the <code>app</code>.</p>
 <pre><code class="cpp">auto app_{make_injector().create&lt;app&gt;()};
@@ -178,7 +178,7 @@ We just have to create <a href="../user_guide/index.html#di_make_injector">injec
 
 <p>Moreover, changes in the constructor of created objects will be handled automatically, so in our case
 when we add a <code>window</code> to <code>view</code> or change <code>view&amp;</code> to <code>std::shared_ptr&lt;view&gt;</code> required effort will be
-exactly '0'. <code>Boost.DI</code> will take care of everything for us!</p>
+exactly '0'. <code>[Boost].DI</code> will take care of everything for us!</p>
 <table>
 <thead>
 <tr>
@@ -240,9 +240,9 @@ exactly '0'. <code>Boost.DI</code> will take care of everything for us!</p>
 </tr>
 </tbody>
 </table>
-<p>Furthermore, there is no performance penalty for using <code>Boost.DI</code> (see <a href="../overview/index.html#performance">Performance</a>)!</p>
+<p>Furthermore, there is no performance penalty for using <code>[Boost].DI</code> (see <a href="../overview/index.html#performance">Performance</a>)!</p>
 <p><span class="fa fa-eye wy-text-neutral warning"> <strong>Note</strong><br/><br/>
-Boost.DI can <a href="../user_guide/index.html#di_automatic">inject</a> dependencies using direct initialization <code>T(...)</code> or uniform initialization <code>T{...}</code> for aggregate types.
+[Boost].DI can <a href="../user_guide/index.html#di_automatic">inject</a> dependencies using direct initialization <code>T(...)</code> or uniform initialization <code>T{...}</code> for aggregate types.
 </span></p>
 <p>Check it out yourself!</p>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
@@ -290,7 +290,7 @@ int main() {
 <ul>
 <li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_create_objects_tree.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_create_objects_tree.cpp</a></li>
 </ul>
-<p>Check out also other examples. Please, notice that the diagram was also generated using <code>Boost.DI</code> but we will get into that a bit later.</p>
+<p>Check out also other examples. Please, notice that the diagram was also generated using <code>[Boost].DI</code> but we will get into that a bit later.</p>
 <ul>
 <li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/hello_world.cpp"> Hello World Example</a></li>
 <li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/automatic_injection.cpp"> Automatic Injection Example</a></li>
@@ -299,7 +299,7 @@ int main() {
 <p><br /><hr /></p>
 <h3 id="2-basic-first-steps-with-bindings">2. [Basic] First steps with bindings</h3>
 <p>But objects tree is not everything. A lot of classes uses interfaces or required a value to be passed.
-<code>Boost.DI</code> solution for this are <a href="../user_guide/index.html#bindings">bindings</a>.</p>
+<code>[Boost].DI</code> solution for this are <a href="../user_guide/index.html#bindings">bindings</a>.</p>
 <p>For purpose of this tutorial, let's change <code>view</code> class into interface <code>iview</code> in order to support <code>text_view</code> and <code>gui_view</code>.</p>
 <pre><code class="cpp">class iview {
 public:
@@ -355,12 +355,12 @@ take a look at <a href="../user_guide/index.html#di_constructible">constructible
 </span></p>
 <pre><code class="cpp">auto injector = di::make_injector(
   di::bind&lt;iview&gt;.to&lt;gui_view&gt;()
-, di::bind&lt;int&gt;.to(42) // renderer device | Boost.DI can also deduce 'int' type for you -&gt; 'di::bind&lt;&gt;.to(42)'
+, di::bind&lt;int&gt;.to(42) // renderer device | [Boost].DI can also deduce 'int' type for you -&gt; 'di::bind&lt;&gt;.to(42)'
 );
 </code></pre>
 
 <p><span class="fa fa-eye wy-text-neutral warning"> <strong>Note</strong><br/><br/>
-Boost.DI is a compile time beast which means that it guarantees that if your code compiles, all dependencies will be resolved
+[Boost].DI is a compile time beast which means that it guarantees that if your code compiles, all dependencies will be resolved
 correctly. No runtime exceptions or runtime asserts, EVER!
 </span></p>
 <p>Check it out yourself!</p>
@@ -407,7 +407,7 @@ int main() {
 <li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_first_steps_with_bindings.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_first_steps_with_bindings.cpp</a></li>
 </ul>
 <p>Great, but my code is more dynamic than that! I mean that I want to choose <code>gui_view</code> or <code>text_view</code> at runtime.
-<code>Boost.DI</code> can handle that too!</p>
+<code>[Boost].DI</code> can handle that too!</p>
 <pre><code class="cpp">auto use_gui_view = ...;
 
 auto injector = di::make_injector(
@@ -422,7 +422,7 @@ auto injector = di::make_injector(
 </code></pre>
 
 <p>Notice, that <a href="../user_guide/index.html#di_make_injector">injector</a> was passed to lambda expression in order to create <code>gui_view</code> / <code>text_view</code>.
-This way <code>Boost.DI</code> can inject appropriate dependencies into chosen types. See <a href="../user_guide/index.html#bindings">bindings</a> for more details.</p>
+This way <code>[Boost].DI</code> can inject appropriate dependencies into chosen types. See <a href="../user_guide/index.html#bindings">bindings</a> for more details.</p>
 <p>Check it out yourself!</p>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
 
@@ -457,7 +457,7 @@ int main() {
 <li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_first_steps_with_dynamic_bindings.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_first_steps_with_dynamic_bindings.cpp</a></li>
 </ul>
 <p>Okay, so what about the input. We have <code>user</code>, however, in the real life, we will have more clients.
-<code>Boost.DI</code> allows multiple bindings to the same type for <code>array/vector/set</code>. Let's do it then!</p>
+<code>[Boost].DI</code> allows multiple bindings to the same type for <code>array/vector/set</code>. Let's do it then!</p>
 <pre><code class="cpp">class iclient {
  public:
    virtual ~iclient() noexcept = default;
@@ -531,7 +531,7 @@ int main() {
 <li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_first_steps_with_multiple_bindings.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_first_steps_with_multiple_bindings.cpp</a></li>
 </ul>
 <p>The last but not least, sometimes, it's really useful to override some bindings. For example, for testing purposes.
-With <code>Boost.DI</code> you can easily do that with <a href="../user_guide/index.html#di_bind">override</a> specifier.</p>
+With <code>[Boost].DI</code> you can easily do that with <a href="../user_guide/index.html#di_bind">override</a> specifier.</p>
 <pre><code class="cpp">auto injector = di::make_injector(
   di::bind&lt;int&gt;.to(42) // renderer device
 , di::bind&lt;int&gt;.to(123) [di::override] // override renderer device
@@ -583,7 +583,7 @@ int main() {
 <p><br /><br /><br /><hr /></p>
 <h3 id="3-basic-decide-the-life-times">3. [Basic] Decide the life times</h3>
 <p>So far so good but where these objects are stored?
-Well, <code>Boost.DI</code> supports <a href="../user_guide/index.html#scopes">scopes</a> which are response for maintaining the life time of created objects.
+Well, <code>[Boost].DI</code> supports <a href="../user_guide/index.html#scopes">scopes</a> which are response for maintaining the life time of created objects.
 By default there are 4 scopes</p>
 <ul>
 <li><a href="../user_guide/index.html#di_deduce">deduce</a> scope (default)</li>
@@ -644,7 +644,7 @@ For instance, reference, shared_ptr will be deduced as <a href="../user_guide/in
 </tbody>
 </table>
 <p>Coming back to our example, we got quite a lot <code>singletons</code> there as we just needed one instance per application life time.
-Although scope deduction is very useful, it's not always what we need and therefore <code>Boost.DI</code> allows changing the scope for given type.</p>
+Although scope deduction is very useful, it's not always what we need and therefore <code>[Boost].DI</code> allows changing the scope for given type.</p>
 <pre><code class="cpp">auto injector = di::make_injector(
   di::bind&lt;iview&gt;.to&lt;gui_view&gt;().in(di::singleton) // explicitly specify singleton scope
 );
@@ -791,9 +791,9 @@ int main() {
 <p><br /><br /><hr /></p>
 <h3 id="4-basic-annotations-to-the-rescue">4. [Basic] Annotations to the rescue</h3>
 <p>Above example are fine and dandy, nonetheless, they don't cover one important thing.
-How <code>Boost.DI</code> knows which constructor to choose and what if they are ambiguous?</p>
+How <code>[Boost].DI</code> knows which constructor to choose and what if they are ambiguous?</p>
 <p>Well, algorithm is very simple. The longest (most parameters), unique constructor will be chosen.
-Otherwise, <code>Boost.DI</code> will give up with compile time error. However, which constructor should
+Otherwise, <code>[Boost].DI</code> will give up with compile time error. However, which constructor should
 be chosen is configurable by <a href="../user_guide/index.html#BOOST_DI_INJECT">BOOST_DI_INJECT</a>.</p>
 <p>To illustrate this, let modify <code>model</code> constructor.</p>
 <pre><code class="cpp">class model {
@@ -911,7 +911,7 @@ int main() {
 <p><br /><br /><hr /></p>
 <h3 id="5-basic-split-your-configuration">5. [Basic] Split your configuration</h3>
 <p>But my project has hundreds of interfaces and I would like to split my bindings into separate components.
-There is nothing simpler than that with <code>Boost.DI</code> as <a href="../user_guide/index.html#di_make_injector">injector</a> might be extended by other <a href="../user_guide/index.html#di_make_injector">injector</a>.</p>
+There is nothing simpler than that with <code>[Boost].DI</code> as <a href="../user_guide/index.html#di_make_injector">injector</a> might be extended by other <a href="../user_guide/index.html#di_make_injector">injector</a>.</p>
 <p>Let's split our configuration then and keep our <code>model</code> bindings separately from <code>app</code> bindings.</p>
 <pre><code class="cpp">auto model_module = [] {
   return di::make_injector(
@@ -985,7 +985,7 @@ int main() {
 <li><a href="https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_split_your_configuration.cpp">https://raw.githubusercontent.com/boost-experimental/di/cpp14/example/tutorial/basic_split_your_configuration.cpp</a></li>
 </ul>
 <p>But I would like to have a module in <code>cpp</code> file, how can I do that?
-Such design might be achieved with <code>Boost.DI</code> using <a href="../user_guide/index.html#di_make_injector">injector</a> and exposing given types.
+Such design might be achieved with <code>[Boost].DI</code> using <a href="../user_guide/index.html#di_make_injector">injector</a> and exposing given types.
 Let's refactor it then.</p>
 <pre><code class="cpp">di::injector&lt;model&amp;&gt; model_module() {
   return di::make_injector(
@@ -1065,11 +1065,11 @@ Expose uses type erasure and therefore it has small performance overhead!
 </ul>
 <p><br /><br /></p>
 <p>Congrats! You have finished the basic part of the tutorial.
-Hopefully, you have noticed potential of DI and <code>Boost.DI</code> but if are still not convinced check out the <a href="#6-advanced-dumplimit-your-types">Advanced</a> part.</p>
+Hopefully, you have noticed potential of DI and <code>[Boost].DI</code> but if are still not convinced check out the <a href="#6-advanced-dumplimit-your-types">Advanced</a> part.</p>
 <h3 id="6-advanced-dumplimit-your-types">6. [Advanced] Dump/Limit your types</h3>
 <p>It's often a case that we would like to generate object diagram of our application in order to see code dependencies
 more clear. Usually, it's a really hard task as creation of objects may happen anywhere in the code. However,
-if the responsibility for creation  objects will be given to <code>Boost.DI</code> we get such functionality for free.
+if the responsibility for creation  objects will be given to <code>[Boost].DI</code> we get such functionality for free.
 The only thing we have to do is to implement how to dump our objects.</p>
 <p>Let's dump our dependencies using <a href="http://plantuml.com">Plant UML</a> format.</p>
 <pre><code class="cpp">#include &lt;boost/di.hpp&gt;
@@ -1133,7 +1133,7 @@ int main() {
 <p><br /></p>
 <p>On the other hand, it would be great to be able to limit types which might be constructed. For example, we just want to allow
 smart pointers and disallow raw pointers too. We may want to have a <code>view</code> only with const parameters being passed, etc.
-<code>Boost.DI</code> allows you to do so by using <a href="../user_guide/index.html#di_constructible">constructible</a> policy or writing a custom <a href="../user_guide/index.html#policies">policy</a>.</p>
+<code>[Boost].DI</code> allows you to do so by using <a href="../user_guide/index.html#di_constructible">constructible</a> policy or writing a custom <a href="../user_guide/index.html#policies">policy</a>.</p>
 <pre><code class="cpp">class all_must_be_bound_unless_int;
 #define BOOST_DI_CFG all_must_be_bound_unless_int
 #include &lt;boost/di.hpp&gt;
@@ -1164,7 +1164,7 @@ int main() {
 </ul>
 <p><br /><hr /></p>
 <h3 id="7-advanced-customize-it">7. [Advanced] Customize it</h3>
-<p><code>Boost.DI</code> was design having extensibility in mind. You can easily customize</p>
+<p><code>[Boost].DI</code> was design having extensibility in mind. You can easily customize</p>
 <ul>
 <li><a href="../user_guide/index.html#scopes">scopes</a> - to have custom life time of an object</li>
 <li><a href="../user_guide/index.html#providers">providers</a> - to have custom way of creating objects, for example by using preallocated memory</li>
@@ -1179,7 +1179,7 @@ int main() {
 </ul>
 <p><br /><hr /></p>
 <h3 id="8-advanced-extend-it">8. [Advanced] Extend it</h3>
-<p>As mentioned before, <code>Boost.DI</code> is quite easy to extend and therefore a lot of extensions exists already.
+<p>As mentioned before, <code>[Boost].DI</code> is quite easy to extend and therefore a lot of extensions exists already.
 Please check them out and write your own!</p>
 <ul>
 <li><a href="../extensions/index.html#constructor-bindings">Constructor Bindings</a></li>
