--- a/boost/index.html
+++ b/boost/index.html
@@ -235,7 +235,7 @@ renderer renderer_;
 view view_{renderer_, logger_};
 model model_{logger_};
 controller controller_{model_, view_, logger_};
-user user_{loger_};
+user user_{logger_};
 app app_{controller_, user_};
 </code></pre>
 
