--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ renderer renderer_;
 view view_{renderer_, logger_};
 model model_{logger_};
 controller controller_{model_, view_, logger_};
-user user_{loger_};
+user user_{logger_};
 app app_{controller_, user_};
 </code></pre>
 
@@ -578,5 +578,5 @@ but also can help you with...</p>
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-11-26 12:26:18.379286
+Build Date UTC : 2016-11-27 12:44:55.084085
 -->
